SERVER-81942 ShardingDDLCoordinator should retry on LockTimeout errors